# dqn-in-the-caffe

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  LICENSE  Makefile  README.md  dqn.cpp  dqn.hpp  dqn_main.cpp  main.cpp
cmake/: Dependencies.cmake  PlatformWindowsGCC.cmake  SDL.cmake
cmake/Modules/: FindALE.cmake  FindCaffe.cmake  FindLMDB.cmake  FindSnappy.cmake
data/: dqn_solver.prototxt  result.caffemodel
source/: CMakeLists.txt
source/qcli/: AppController.h  CMakeLists.txt  CliController.h  CliParser.cpp  CliParser.h  EvaluateCliController.cpp  EvaluateCliController.h  EvaluateController.cpp  EvaluateController.h  GameDQNBridge.cpp  GameDQNBridge.h  HelpController.h  LearnCliController.cpp  LearnCliController.h  LearnController.cpp  LearnController.h  defaults.h  main.cpp
source/qlearning/: CMakeLists.txt
source/qlearning/include/qlearning/: ale.h  dqn.h  dqn.hpp  dqn_types.h  qlearning_api.h
source/qlearning/source/: .dqn.cpp.swp  ALE_Color.cpp  ALE_Screen.cpp  DQN.cpp  ale.cpp  dqn.cpp
